--- a/src/ManiaVersionSelector/ManiaVersionSelector.csproj
+++ b/src/ManiaVersionSelector/ManiaVersionSelector.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="gong-wpf-dragdrop" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
